examples/test/testpolicy17923.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17923
  namespace: namespace295
spec:
  podSelector:
    matchLabels:
      key13: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value45
          key44: value8
      podSelector:
        matchLabels:
          key5: value11
          key34: value14
